--- a/steradian/index.html
+++ b/steradian/index.html
@@ -15,7 +15,7 @@
 		<script type="importmap">
 			{
 				"imports": {
-					"three": "../build/three.module.js"
+					"three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
 				}
 			}
 		</script>
@@ -24,9 +24,9 @@
 
 			import * as THREE from 'three';
 
-			import { GUI } from './jsm/libs/lil-gui.module.min.js';
+			import { GUI } from 'https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js';
 
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
+			import { OrbitControls } from './OrbitControls.js';
 
 			let camera, scene, renderer;
 
