--- a/steradian/index.html
+++ b/steradian/index.html
@@ -1,171 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>three.js webgl - clipIntersection</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<!-- <link type="text/css" rel="stylesheet" href="main.css"> -->
-	</head>
-	<body>
 
-		<!-- Import maps polyfill -->
-		<!-- Remove this when import maps will be widely supported -->
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+<head>
+	<title>Steradian Demo</title>
+	<style>
+		body {
+			margin: 0;
+		}
+		canvas {
+			margin: auto;
+		}
+	</style>
+	<meta charset="utf-8">
+</head>
 
-		<script type="importmap">
-			{
-				"imports": {
-					"three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"
-				}
-			}
-		</script>
+<body>
 
-		<script type="module">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+	<script>
 
-			import * as THREE from 'three';
+		// CREATE SCENE
+		var scene = new THREE.Scene();
+		var camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000);
 
-			import { GUI } from 'https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js';
+		var renderer = new THREE.WebGLRenderer();
+		var canvasDimension = Math.min(500, window.innerWidth, window.innerHeight);
+		renderer.setSize(canvasDimension, canvasDimension);
+		document.body.appendChild(renderer.domElement);
 
-			import { OrbitControls } from './OrbitControls.js';
+		// SPHERE
+		var geometry = new THREE.SphereGeometry(1, 32, 16);
+		var wireframe = new THREE.WireframeGeometry(geometry);
+		var sphere = new THREE.LineSegments(wireframe);
+		sphere.material.depthTest = false;
+		sphere.material.opacity = 0.25;
+		sphere.material.transparent = true;
+		scene.add(sphere);
 
-			let camera, scene, renderer;
+		// CAMERA & LIGHTS
+		camera.position.z = 3;
 
-			const params = {
-				clipIntersection: true,
-				planeConstant: 0,
-				showHelpers: false
-			};
+		// ANIMATION / MOVEMENT
+		var animate = function () {
+			requestAnimationFrame(animate);
 
-			const clipPlanes = [
-				new THREE.Plane( new THREE.Vector3( 1, 0, 0 ), 0 ),
-				new THREE.Plane( new THREE.Vector3( 0, - 1, 0 ), 0 ),
-				new THREE.Plane( new THREE.Vector3( 0, 0, - 1 ), 0 )
-			];
+			sphere.rotation.x += 0.01;
+			sphere.rotation.y += 0.01;
 
-			init();
-			render();
+			renderer.render(scene, camera);
+		};
 
-			function init() {
+		animate();
+	</script>
 
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.localClippingEnabled = true;
-				document.body.appendChild( renderer.domElement );
+</body>
 
-				scene = new THREE.Scene();
-
-				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 200 );
-
-				camera.position.set( - 1.5, 2.5, 3.0 );
-
-				const controls = new OrbitControls( camera, renderer.domElement );
-				controls.addEventListener( 'change', render ); // use only if there is no animation loop
-				controls.minDistance = 1;
-				controls.maxDistance = 10;
-				controls.enablePan = false;
-
-				const light = new THREE.HemisphereLight( 0xffffff, 0x080808, 1.5 );
-				light.position.set( - 1.25, 1, 1.25 );
-				scene.add( light );
-
-				// const helper = new THREE.CameraHelper( light.shadow.camera );
-				// scene.add( helper );
-
-				//
-
-				const group = new THREE.Group();
-
-				for ( let i = 1; i <= 30; i += 2 ) {
-
-					const geometry = new THREE.SphereGeometry( i / 30, 48, 24 );
-
-					const material = new THREE.MeshLambertMaterial( {
-
-						color: new THREE.Color().setHSL( Math.random(), 0.5, 0.5 ),
-						side: THREE.DoubleSide,
-						clippingPlanes: clipPlanes,
-						clipIntersection: params.clipIntersection
-
-					} );
-
-					group.add( new THREE.Mesh( geometry, material ) );
-
-				}
-
-				scene.add( group );
-
-				// helpers
-
-				const helpers = new THREE.Group();
-				helpers.add( new THREE.PlaneHelper( clipPlanes[ 0 ], 2, 0xff0000 ) );
-				helpers.add( new THREE.PlaneHelper( clipPlanes[ 1 ], 2, 0x00ff00 ) );
-				helpers.add( new THREE.PlaneHelper( clipPlanes[ 2 ], 2, 0x0000ff ) );
-				helpers.visible = false;
-				scene.add( helpers );
-
-				// gui
-
-				const gui = new GUI();
-
-				gui.add( params, 'clipIntersection' ).name( 'clip intersection' ).onChange( function ( value ) {
-
-					const children = group.children;
-
-					for ( let i = 0; i < children.length; i ++ ) {
-
-						children[ i ].material.clipIntersection = value;
-
-					}
-
-					render();
-
-				} );
-
-				gui.add( params, 'planeConstant', - 1, 1 ).step( 0.01 ).name( 'plane constant' ).onChange( function ( value ) {
-
-					for ( let j = 0; j < clipPlanes.length; j ++ ) {
-
-						clipPlanes[ j ].constant = value;
-
-					}
-
-					render();
-
-				} );
-
-				gui.add( params, 'showHelpers' ).name( 'show helpers' ).onChange( function ( value ) {
-
-					helpers.visible = value;
-
-					render();
-
-				} );
-
-				//
-
-				window.addEventListener( 'resize', onWindowResize );
-
-			}
-
-			function onWindowResize() {
-
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-
-				renderer.setSize( window.innerWidth, window.innerHeight );
-
-				render();
-
-			}
-
-			function render() {
-
-				renderer.render( scene, camera );
-
-			}
-
-		</script>
-
-	</body>
 </html>
