extract script and style into files

--- a/steradian/index.html
+++ b/steradian/index.html
@@ -3,56 +3,13 @@
 
 <head>
 	<title>Steradian Demo</title>
-	<style>
-		body {
-			margin: 0;
-		}
-		canvas {
-			margin: auto;
-		}
-	</style>
 	<meta charset="utf-8">
 </head>
 
 <body>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-	<script>
-
-		// CREATE SCENE
-		var scene = new THREE.Scene();
-		var camera = new THREE.PerspectiveCamera(75, 1, 0.1, 1000);
-
-		var renderer = new THREE.WebGLRenderer();
-		var canvasDimension = Math.min(500, window.innerWidth, window.innerHeight);
-		renderer.setSize(canvasDimension, canvasDimension);
-		document.body.appendChild(renderer.domElement);
-
-		// SPHERE
-		var geometry = new THREE.SphereGeometry(1, 32, 16);
-		var wireframe = new THREE.WireframeGeometry(geometry);
-		var sphere = new THREE.LineSegments(wireframe);
-		sphere.material.depthTest = false;
-		sphere.material.opacity = 0.25;
-		sphere.material.transparent = true;
-		scene.add(sphere);
-
-		// CAMERA & LIGHTS
-		camera.position.z = 3;
-
-		// ANIMATION / MOVEMENT
-		var animate = function () {
-			requestAnimationFrame(animate);
-
-			sphere.rotation.x += 0.01;
-			sphere.rotation.y += 0.01;
-
-			renderer.render(scene, camera);
-		};
-
-		animate();
-	</script>
-
+	<script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
