--- a/steradian/index.html
+++ b/steradian/index.html
@@ -4,11 +4,10 @@
 <head>
 	<title>Steradian Demo</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 	<script type="module" src="./src/main.js"></script>
 </body>
 
