improve visual style

--- a/steradian/index.html
+++ b/steradian/index.html
@@ -17,7 +17,7 @@
 		Steradians = <span id="steradians"></span><br>
 		Polar Angle = <span id="polarAngle"></span><br>
 		Cone (pink) Height = <span id="coneHeight"></span><br>
-		Cone Cap (blue) Area  = <span id="capArea"></span>
+		Cone Cap (blue) Area = <span id="capArea"></span>
 	</p>
 	<p>What is a steradian? Just like radians measure the angle of a circle, steradians measure the
 		<b>solid angle</b> of a sphere. When you get an angle of a circle, that represents a slice
@@ -26,6 +26,9 @@
 	<p>Confusing, right? That's why I made this tool to visualize what a solid angle and its corresponding steradian
 		value actually look like in 3D. Go on, try rotating the sphere and adjusting the height.</p>
 
+	<p><a href="https://github.com/jerrutledge/jerrutledge.github.io/tree/main/steradian">Check out the code on
+			jerrutledge's GitHub</a>
+	</p>
 </body>
 
 </html>
