--- a/steradian/index.html
+++ b/steradian/index.html
@@ -24,10 +24,11 @@
 		of the circle. When you get a solid angle of a sphere, that represents the sort of cone-like
 		shape you see cut out of the sphere above.</p>
 	<p>Confusing, right? That's why I made this tool to visualize what a solid angle and its corresponding steradian
-		value actually look like in 3D. Go on, try rotating the sphere and adjusting the height.</p>
+		value actually look like in 3D. Try adjusting the height using the slider in the top right.</p>
 
 	<p><a href="https://github.com/jerrutledge/jerrutledge.github.io/tree/main/steradian">Check out the code on
-			jerrutledge's GitHub</a>
+			jerrutledge's GitHub</a><br>
+		<a href="https://jerrutledge.github.io/">Jeremy Rutledge's website home</a>
 	</p>
 </body>
 
